--- a/fartuk/Views/Shared/_Layout.cshtml
+++ b/fartuk/Views/Shared/_Layout.cshtml
@@ -142,7 +142,7 @@
                                                             <li class="item-258">
                                                                 <span class="separator">Посмотреть все фартуки Вы можете в нашем каталоге. Нажмите на кнопку ниже.</span>                                                            </li>
                                                         </ul>
-                                                        <a class="btn btn-info readmore" href="@Url.Action("GetCatalog", "Home")" target="_blank"><span>Каталог</span></a>
+                                                        <a class="btn btn-info readmore" href="ftp://pngn.ru/catalog_f.pdf" target="_blank"><span>Каталог</span></a>
                                                     </div>
                                                 </div>
                                             </header>
