--- a/fartuk2/Views/Home/Index.cshtml
+++ b/fartuk2/Views/Home/Index.cshtml
@@ -140,7 +140,7 @@
                 <div class="half last order-on-page">
                     <div id="popup" class="order-popup">
                         <h4>Запишитесь на <strong>бесплатный</strong> замер!</h4>
-                        <p style="margin-bottom: 5px;">Ну, божалуйста...</p>
+                        <p style="margin-bottom: 5px;">Заполните поля и нажмите кнопку "Записаться на замер"</p>
                         @using (Html.BeginForm("OrderFinish", "Home", FormMethod.Post, new {@class = "subscribe"}))
                         {
                             <div>
