--- a/fartuk2/Views/Home/Index.cshtml
+++ b/fartuk2/Views/Home/Index.cshtml
@@ -55,11 +55,11 @@
                 <div class="one_fourth">
                     <img class="ico_left" src="@Url.Content("~/Content/img/cena.png")" title="Прозрачное ценообразование" alt="icon" />
                     <h3><strong>5550р/м<sup>2</sup></strong> на все фартуки</h3>
-                    <p>Вы платите только за квадратные метры в которые всё включено и ни копейки больше с гарантией самой низкой цены в городе!</p>
+                    <p>Вы платите только за квадратные метры, в которые всё включено и ни копейки больше, с гарантией самой низкой цены в городе!</p>
                 </div>
                 <!-- .one_fourth -->
                 <div class="one_fourth">
-                    <img class="ico_left" src="@Url.Content("~/Content/img/zamer.png")" title="Установка в течение 1 часа" alt="icon" />
+                    <img class="ico_left" src="@Url.Content("~/Content/img/zamer.png")" title="Замер" alt="icon" />
                     <h3>Бесплатный замер в тот же день</h3>
                     <p>Наши монтажники приедут к Вам на замер в любое удобное для Вас время.</p>
                 </div>
