--- a/fartuk2/Views/Home/Index.cshtml
+++ b/fartuk2/Views/Home/Index.cshtml
@@ -44,8 +44,7 @@
                     <a id="orderForm" href="#popup" class="btn">Записаться на бесплатный замер</a> 
                     <a href="ftp://pngn.ru/catalog_f.pdf" style="margin-left: 10px;" class="btn yellow" target="_blank">Каталог</a>
                 </p>
-                <p><small>Выберите фартук в <a href="#"><strong>Каталоге</strong></a> и <a href="#"><strong>Сделайте заказ на замер</strong></a> и в ближайшее время мы с Вами свяжемся.
-                       <br /></small></p>
+                <p><small>Цвет монитора может не передавать в точности цвета, которые будут напечатаны<br /></small></p>
             </div>
             <!-- .promo -->
         </div>
